# F1Tenth-System-Architecture

./: .gitignore  F1Tenth_Final_Pipeline_Test.md  README.md
docker/f1tenth/: Dockerfile  docker-compose.yml
docker/go_kart/: .gitkeep
docs/architecture/: system_overview.md
docs/docker/: setup_guide.md
docs/hardware/: hardware_specs.md
docs/ros2_stack/: node_architecture.md
scripts/f1tenth/: launch_stack.sh  setup_host.sh  teleop_keyboard.py
scripts/go_kart/: README.md
src/control_planning/: CMakeLists.txt  package.xml
src/control_planning/src/: kart_controller.cpp
src/f1tenth_bringup/: package.xml  setup.py
src/f1tenth_bringup/config/: vesc_params.yaml  zed_overrides.yaml
src/f1tenth_bringup/config/zed_config/: common_stereo.yaml
src/f1tenth_bringup/launch/: f1tenth_stack.launch.py
src/vision_perception/: package.xml  setup.py
src/vision_perception/vision_perception/: lane_slam.py  line_mapper.py  slam_visualizer.py  visualized_line_mapper.py
